feat: add transactions chart
