# src/gen/models/GetTransactionsStatsResponse.ts
@@ -1,0 +1,107 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Pontuaí
+ * The Pontuaí API experience :)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import type { TransactionResponse } from './TransactionResponse';
+import {
+    TransactionResponseFromJSON,
+    TransactionResponseToJSON
+} from './TransactionResponse';
+
+/**
+ * 
+ * @export
+ * @interface GetTransactionsStatsResponse
+ */
+export interface GetTransactionsStatsResponse {
+    /**
+     * 
+     * @type {number}
+     * @memberof GetTransactionsStatsResponse
+     */
+    expiredPoints: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof GetTransactionsStatsResponse
+     */
+    earnedPoints: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof GetTransactionsStatsResponse
+     */
+    redeemedPoints: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof GetTransactionsStatsResponse
+     */
+    availablePoints: number;
+    /**
+     * List of transactions
+     * @type {Array<TransactionResponse>}
+     * @memberof GetTransactionsStatsResponse
+     */
+    transactions: Array<TransactionResponse>;
+}
+
+/**
+ * Check if a given object implements the GetTransactionsStatsResponse interface.
+ */
+export function instanceOfGetTransactionsStatsResponse(value: object): value is GetTransactionsStatsResponse {
+    if (!('expiredPoints' in value) || value['expiredPoints'] === undefined) return false;
+    if (!('earnedPoints' in value) || value['earnedPoints'] === undefined) return false;
+    if (!('redeemedPoints' in value) || value['redeemedPoints'] === undefined) return false;
+    if (!('availablePoints' in value) || value['availablePoints'] === undefined) return false;
+    if (!('transactions' in value) || value['transactions'] === undefined) return false;
+    return true;
+}
+
+export function GetTransactionsStatsResponseFromJSON(json: any): GetTransactionsStatsResponse {
+    return GetTransactionsStatsResponseFromJSONTyped(json, false);
+}
+
+export function GetTransactionsStatsResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): GetTransactionsStatsResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'expiredPoints': json['expiredPoints'],
+        'earnedPoints': json['earnedPoints'],
+        'redeemedPoints': json['redeemedPoints'],
+        'availablePoints': json['availablePoints'],
+        'transactions': ((json['transactions'] as Array<any>).map(TransactionResponseFromJSON)),
+    };
+}
+
+export function GetTransactionsStatsResponseToJSON(json: any): GetTransactionsStatsResponse {
+    return GetTransactionsStatsResponseToJSONTyped(json, false);
+}
+
+export function GetTransactionsStatsResponseToJSONTyped(value?: GetTransactionsStatsResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'expiredPoints': value['expiredPoints'],
+        'earnedPoints': value['earnedPoints'],
+        'redeemedPoints': value['redeemedPoints'],
+        'availablePoints': value['availablePoints'],
+        'transactions': ((value['transactions'] as Array<any>).map(TransactionResponseToJSON)),
+    };
+}
+
